Bug 501375 - nsHTMLTableAccessible::HasDescendant is much slower than it should be, r=marcoz, sr=bz